--- a/_includes/category.html
+++ b/_includes/category.html
@@ -7,7 +7,8 @@
 		{%- if site.posts.size > 0 -%}
 		<ul class="post-list">
 			{%- for post in site.posts -%}
-			<li class="post-list-item post-category-{{post.categories}}">
+				{%- for categorie in site.categories -%}
+			<li class="post-list-item post-category-{{categorie}}">
 				<!-- {%- assign date_format = site.date_format | default: "%b %-d, %Y" -%} -->
 				{%- assign date_format = "%Y/%m/%d" -%}
 				<span class="post-date">{{ post.date | date: date_format }}</span>
@@ -16,6 +17,7 @@
 				</a>
 				{%- if site.show_excerpts -%}{{ post.excerpt }}{%- endif -%}
 			</li>
+				{%- endfor -%}
 		  	{%- endfor -%}
 		</ul>
 	  	{%- endif -%}
