--- a/_includes/category.html
+++ b/_includes/category.html
@@ -7,7 +7,8 @@
 		{%- if site.posts.size > 0 -%}
 		<ul class="post-list">
 			{%- for post in site.posts -%}
-				{%- for categorie in site.categories -%}
+				<!-- TODO 优化categories -->
+				{%- for categorie in post.categories -%}
 			<li class="post-list-item post-category-{{categorie}}">
 				<!-- {%- assign date_format = site.date_format | default: "%b %-d, %Y" -%} -->
 				{%- assign date_format = "%Y/%m/%d" -%}
